tests/parsing/smtlib/v2.7/errors/007_attribute_missing_term.smt2
(set-logic ALL)
(assert (! _))
